# grpo_weave

./: .gitignore  README.md  config.py  main.py  prepare_dataset.py  pyproject.toml  rewards.py  simple_config.yaml  train.py  train_grpo.py  utills.py  utils.py
gsm8k_dataset_prepared/: dataset_info.json  state.json
wandb/: latest-run
wandb/run-20250514_132532-ij9cece1/: run-ij9cece1.wandb
wandb/run-20250514_132532-ij9cece1/files/: config.yaml  diff_3681939327bee20a318d5cffe179d65a7bcfcf39.patch  wandb-metadata.json
wandb/run-20250514_132628-5hio90oe/files/: diff.patch  requirements.txt  wandb-metadata.json
wandb/run-20250514_132628-5hio90oe/files/code/: train.py
wandb/run-20250514_132628-5hio90oe/files/media/table/: completions_12_2b3132c3aa9facd58ba6.table.json  completions_25_55b1e069c7be34644f9c.table.json  completions_38_91019bdc9c6aaa27456f.table.json  completions_51_8ebb5296755c81455ca8.table.json  completions_64_d661a4b79cb8fee408d2.table.json  completions_77_4b5f32c461ca37b25ed7.table.json
